# viceverser

./: .gitignore  MANIFEST.in  README.md  get_data.sh  pyproject.toml  ruff.toml  setup.py
viceverser/: __init__.py  default.py  feats.py  lemmatizer.py
viceverser/data/: fr_ud.aff  fr_ud.dic  st.aff  st.dic
viceverser/francais/: lemmatizer_exceptions.py  lemmes_exceptions.py  lemmes_exections.py  pos_priorities.py  rule_lemmatize.py  verbes_speciaux.py
viceverser/utils/: pos_rules.py
